# SOLO_coder

./: .gitignore  BUG_FIX_REPORT.md  BUG_REPORT.md  PRD.md  README.md  RPD.md  config.py  main.py  package.json  pnpm-lock.yaml  requirements.txt
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  assets.py  chapters.py  novels.py  write.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/models/: models.py  schemas.py
backend/app/routers/: api_config.py  documents.py  query.py
backend/app/schemas/: __init__.py  asset.py  chapter.py  novel.py  volume.py  write.py
backend/app/services/: __init__.py  ai_service.py  api_config_service.py  document_parser.py  novel_service.py  rag_engine.py  service_factory.py  vector_store.py
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/lib/: api.ts
client/src/store/: cardStore.ts
client/src/types/: index.ts
frontend/: .gitignore  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  DirectoryTree.tsx  DocumentList.tsx  DocumentUploader.tsx  Header.tsx  NovelEditor.tsx  SettingsModal.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
modules/: __init__.py  database.py  gui.py  llm_service.py  watcher.py
server/: .env.example  requirements.txt
server/app/: main.py
utils/: text_extractor.py
(+13 files in other folders)
