[project]
name = "inksoul-backend"
version = "1.0.0"
description = "InkSoul AI 后端服务 - FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "langchain>=0.1.20",
    "langchain-community>=0.0.38",
    "langchain-openai>=0.1.7",
    "openai>=1.30.1",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "supabase>=2.4.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiohttp>=3.9.5",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
